--- a/api/package.json
+++ b/api/package.json
@@ -24,7 +24,9 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pg": "^8.5.1",
+    "url-parse": "^1.4.7"
   },
   "devDependencies": {},
   "autoload": {
